apps/servarr/lidarr/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: lidarr
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - lidarr
